done add dynamic data to gen code
