# apidocs.swagger.json
@@ -194,6 +194,36 @@
         ]
       }
     },
+    "/api/collection/map": {
+      "get": {
+        "operationId": "DynamicDataService_GetCollectionMapping",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiGetCollectionMappingResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "projectId",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "DynamicDataService"
+        ]
+      }
+    },
     "/api/document": {
       "get": {
         "operationId": "DynamicDataService_GetDocument",
@@ -704,6 +734,30 @@
         }
       }
     },
+    "apiCollectionInfo": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "dataKeys": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "dataTypes": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "documents": {
+          "type": "object",
+          "additionalProperties": {}
+        }
+      }
+    },
     "apiCreateCollectionRequest": {
       "type": "object",
       "properties": {
@@ -742,9 +796,7 @@
       "properties": {
         "data": {
           "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          }
+          "additionalProperties": {}
         },
         "collectionId": {
           "type": "integer",
@@ -803,9 +855,7 @@
         },
         "data": {
           "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          }
+          "additionalProperties": {}
         },
         "collectionId": {
           "type": "integer",
@@ -841,6 +891,17 @@
       "properties": {
         "url": {
           "type": "string"
+        }
+      }
+    },
+    "apiGetCollectionMappingResponse": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/apiCollectionInfo"
+          }
         }
       }
     },
@@ -887,9 +948,7 @@
         },
         "data": {
           "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          }
+          "additionalProperties": {}
         },
         "collectionId": {
           "type": "integer",
@@ -1137,9 +1196,7 @@
         },
         "data": {
           "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          }
+          "additionalProperties": {}
         },
         "collectionId": {
           "type": "integer",
@@ -1192,6 +1249,14 @@
         }
       },
       "additionalProperties": {}
+    },
+    "protobufNullValue": {
+      "type": "string",
+      "enum": [
+        "NULL_VALUE"
+      ],
+      "default": "NULL_VALUE",
+      "description": "`NullValue` is a singleton enumeration to represent the null value for the\n`Value` type union.\n\n The JSON representation for `NullValue` is JSON `null`.\n\n - NULL_VALUE: Null value."
     },
     "rpcStatus": {
       "type": "object",
