# app/dynamic_data/api/api.pb.gw.go
@@ -313,6 +313,42 @@ func local_request_DynamicDataService_GetListCollections_0(ctx context.Context, 
 
 }
 
+var (
+	filter_DynamicDataService_GetCollectionMapping_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_DynamicDataService_GetCollectionMapping_0(ctx context.Context, marshaler runtime.Marshaler, client DynamicDataServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetCollectionMappingRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_DynamicDataService_GetCollectionMapping_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.GetCollectionMapping(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_DynamicDataService_GetCollectionMapping_0(ctx context.Context, marshaler runtime.Marshaler, server DynamicDataServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetCollectionMappingRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_DynamicDataService_GetCollectionMapping_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.GetCollectionMapping(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_DynamicDataService_UpdateCollection_0(ctx context.Context, marshaler runtime.Marshaler, client DynamicDataServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq UpdateCollectionRequest
 	var metadata runtime.ServerMetadata
@@ -604,6 +640,31 @@ func RegisterDynamicDataServiceHandlerServer(ctx context.Context, mux *runtime.S
 		}
 
 		forward_DynamicDataService_GetListCollections_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_DynamicDataService_GetCollectionMapping_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/buildify.app.dynamic_data.api.DynamicDataService/GetCollectionMapping", runtime.WithHTTPPathPattern("/api/collection/map"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_DynamicDataService_GetCollectionMapping_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_DynamicDataService_GetCollectionMapping_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -899,6 +960,28 @@ func RegisterDynamicDataServiceHandlerClient(ctx context.Context, mux *runtime.S
 
 	})
 
+	mux.Handle("GET", pattern_DynamicDataService_GetCollectionMapping_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/buildify.app.dynamic_data.api.DynamicDataService/GetCollectionMapping", runtime.WithHTTPPathPattern("/api/collection/map"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_DynamicDataService_GetCollectionMapping_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_DynamicDataService_GetCollectionMapping_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("PUT", pattern_DynamicDataService_UpdateCollection_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -985,6 +1068,8 @@ var (
 
 	pattern_DynamicDataService_GetListCollections_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "collection", "list"}, ""))
 
+	pattern_DynamicDataService_GetCollectionMapping_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "collection", "map"}, ""))
+
 	pattern_DynamicDataService_UpdateCollection_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"api", "collection"}, ""))
 
 	pattern_DynamicDataService_DeleteCollection_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"api", "collection"}, ""))
@@ -1008,6 +1093,8 @@ var (
 	forward_DynamicDataService_GetCollection_0 = runtime.ForwardResponseMessage
 
 	forward_DynamicDataService_GetListCollections_0 = runtime.ForwardResponseMessage
+
+	forward_DynamicDataService_GetCollectionMapping_0 = runtime.ForwardResponseMessage
 
 	forward_DynamicDataService_UpdateCollection_0 = runtime.ForwardResponseMessage
 
