# app/dynamic_data/internal/dto/collection.go
@@ -13,6 +13,15 @@ type ListCollections struct {
 	Documents   []Document
 }
 
+type CollectionInfo struct {
+	Name      string
+	DataKeys  []string
+	DataTypes []int32
+	Documents map[int32]interface{}
+}
+
+type CollectionMap map[int32]*CollectionInfo
+
 type GetCollection struct {
 	Id        int32
 	Name      string
